point enableWA preview file to flexible server DB

--- a/charts/civil-ccd/values.enableWA.preview.template.yaml
+++ b/charts/civil-ccd/values.enableWA.preview.template.yaml
@@ -22,9 +22,8 @@ wa:
   global:
     postgresUsername: hmcts
     postgresSecret: postgres
-    postgresHost: ${SERVICE_NAME}-postgresql
-#    postgresHost: civil-preview.postgres.database.azure.com
-#    databaseNamePrefix: "pr-${CHANGE_ID}-"
+    postgresHost: civil-preview.postgres.database.azure.com
+    databaseNamePrefix: "pr-${CHANGE_ID}-"
   wa:
     postgresql:
       enabled: false
@@ -39,7 +38,7 @@ wa:
         POSTGRES_PASSWORD:
           secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: true
+          disabled: false
       environment:
         CCD_URL: http://{{ .Release.Name }}-ccd-data-store-api
         CCD_SEARCH_URL: http://{{ .Release.Name }}-ccd-data-store-api
@@ -48,8 +47,10 @@ wa:
         AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
         #AZURE_SERVICE_BUS_TOPIC_NAME: servicebus-topic-{{ .Release.Name }}-asb-ccd-case-events
         AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
-        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified"
+        POSTGRES_HOST: "{{ .Values.global.postgresHostname }}"
+        POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}wa-case-event-handler"
+        POSTGRES_USERNAME: "{{ .Values.global.postgresUsername }}"
+        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
 
   wa-task-monitor:
     java:
@@ -62,49 +63,50 @@ wa:
     java:
       environment:
         ROLE_ASSIGNMENT_URL: http://am-role-assignment-service-aat.service.core-compute-aat.internal
-        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified"
-        POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
-        POSTGRES_REPLICA_HOST: "{{ .Release.Name }}-postgresql"
-        POSTGRES_REPLICA_PORT: 5432
-        POSTGRES_NAME: "cft_task_db"
-        POSTGRES_REPLICA_NAME: "cft_task_db_replica"
-        POSTGRES_USERNAME: postgres
-        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        REPLICATION_USERNAME: postgres
-        REPLICATION_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
+        POSTGRES_HOST: "{{ .Values.global.postgresHostname }}"
+        POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}cft_task_db"
+        POSTGRES_USERNAME: "{{ .Values.global.postgresUsername }}"
+#        POSTGRES_REPLICA_HOST: "{{ .Release.Name }}-postgresql"
+#        POSTGRES_REPLICA_PORT: 5432
+#        POSTGRES_REPLICA_NAME: "cft_task_db_replica"
+#        REPLICATION_USERNAME: postgres
+#        REPLICATION_PASSWORD: ${POSTGRES_PASSWORD}
         SPRING_PROFILES_ACTIVE: "preview"
         DB_READER_USERNAME: postgres
       secrets:
         POSTGRES_PASSWORD:
           secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: true
+          disabled: false
   wa-workflow-api:
     java:
       environment:
         DB_READER_USERNAME: "hmcts"
-        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified"
+        POSTGRES_HOST: "{{ .Values.global.postgresHostname }}"
+        POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}wa_workflow_api"
+        POSTGRES_USERNAME: "{{ .Values.global.postgresUsername }}"
+        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
         CAMUNDA_URL: https://camunda-${SERVICE_FQDN}/engine-rest/
     secrets:
       POSTGRES_PASSWORD:
         secretRef: "{{ .Values.global.postgresSecret }}"
         key: PASSWORD
-        disabled: true
+        disabled: false
   camunda-bpm:
     java:
       environment:
-        CAMUNDA_DB_USER_NAME: "hmcts"
-        CAMUNDA_DB_PASSWORD: ${POSTGRES_PASSWORD}
-        CAMUNDA_DB_CONN_OPTIONS: "?stringtype=unspecified"
-        CAMUNDA_DB_NAME: 'camunda'
+        CAMUNDA_DB_HOST: "{{ .Values.global.postgresHostname }}"
+        CAMUNDA_DB_USER_NAME: "{{ .Values.global.postgresUsername }}"
+        CAMUNDA_DB_CONN_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
+        CAMUNDA_DB_NAME: "{{ .Values.global.databaseNamePrefix }}camunda"
         TASK_MANAGEMENT_API_URL: http://{{ .Release.Name }}-wa-task-management-api
         CAMUNDA_API_AUTH_ENABLED: false
       secrets:
         CAMUNDA_DB_PASSWORD:
           secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: true
+          disabled: false
 ccd-message-publisher:
   java:
     ingressHost: ccd-message-publisher-${SERVICE_FQDN}
@@ -115,15 +117,10 @@ ccd-message-publisher:
           - name: AppInsightsInstrumentationKey
             alias: azure.application-insights.instrumentation-key
     environment:
-#      DATA_STORE_DB_HOST: civil-preview.postgres.database.azure.com
-#      DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
-#      DATA_STORE_DB_USERNAME: hmcts
-#      DATA_STORE_DB_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
-      DATA_STORE_DB_HOST: "{{ .Release.Name }}-postgresql"
-      DATA_STORE_DB_NAME: "data-store"
+      DATA_STORE_DB_HOST: civil-preview.postgres.database.azure.com
+      DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
       DATA_STORE_DB_USERNAME: hmcts
-      DATA_STORE_DB_PASSWORD: ${POSTGRES_PASSWORD}
-      DATA_STORE_DB_OPTIONS: "?stringtype=unspecified"
+      DATA_STORE_DB_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
       CCD_CASE_EVENTS_DESTINATION: ${SERVICE_NAME}-asb-ccd-case-events
     secrets:
       SERVICE_BUS_CONNECTION_STRING:
@@ -132,7 +129,7 @@ ccd-message-publisher:
       DATA_STORE_DB_PASSWORD:
         secretRef: postgres
         key: PASSWORD
-        disabled: true
+        disabled: false
 
 xui-webapp:
   nodejs:
