add BankHolidaysHelper and new setup project

--- a/package.json
+++ b/package.json
@@ -65,9 +65,10 @@
     "test:AATFunctional": "./e2e/run-prod-functional-tests.sh",
     "test:DemoFunctional": "./e2e/run-features-flag-enabled-full-functional-tests",
     "test:playwright-setup:install": "yarn playwright install",
+    "test:playwright-setup:data:ci": "npx playwright test --project data-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:users:ci": "npx playwright test --project users-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:users-auth:ci": "npx playwright test --project users-auth-setup --pass-with-no-tests --no-deps",
-    "test:playwright-e2e-setup:ci": "yarn test:playwright-setup:users:ci && yarn test:playwright-setup:users-auth:ci",
+    "test:playwright-e2e-setup:ci": "./bin/run-commands-series.sh -c \"test:playwright-setup:data:ci\" \"test:playwright-setup:users:ci && test:playwright-setup:users-auth:ci\"",
     "test:playwright-e2e-nightly:ci": "FUNCTIONAL=true npx playwright test --project e2e-full-functional --no-deps",
     "test:playwright-teardown:users-auth:ci": "npx playwright test --project users-auth-teardown --pass-with-no-tests --no-deps",
     "test:playwright-e2e-teardown:ci": "./bin/run-commands-series.sh -c \"test:playwright-teardown:users-auth:ci\" \"ts-node ./playwright-e2e/global/teardown-ci\"",
