add setup for bank holidays json

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ allure-report/
 playwright-report/
 /playwright-e2e/fixtures/.users/
 /playwright-e2e/fixtures/.user-cookies/
+/playwright-e2e/fixtures/data/bankHolidays.json
