Finished page objects for inform agreed extension date spec

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ playwright-test-results/
 allure-results/
 playwright-allure-functional-results/
 playwright-allure-bootstrap-results/
+playwright-allure-bootstrap-report/
+playwright-allure-functional-report/
 allure-report/
 playwright-report/
 /playwright-e2e/fixtures/.users/
