--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Civil e2e tests",
   "scripts": {
-    "lint": "./bin/run-commands-series.sh -c \"eslint\" \"lint:no-dup-classes\"",
-    "lint:staged:no-dup-classes": "./bin/run-commands-series.sh -c \"lint-staged\" \"lint:no-dup-classes\"",
+    "lint": "./bin/run-commands-series.sh -c \"yarn eslint\" \"yarn lint:no-dup-classes\"",
+    "lint:staged:no-dup-classes": "./bin/run-commands-series.sh -c \"yarn lint-staged\" \"yarn lint:no-dup-classes\"",
     "lint:no-dup-classes": "eslint --config ./custom-eslint-configs/no-dup-classes.config.mjs",
     "pre-commit": "./.husky/pre-commit",
     "lint:fix": "eslint . --fix",
@@ -68,10 +68,10 @@
     "test:playwright-setup:data:ci": "npx playwright test --project data-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:users:ci": "npx playwright test --project users-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:users-auth:ci": "npx playwright test --project users-auth-setup --pass-with-no-tests --no-deps",
-    "test:playwright-e2e-setup:ci": "./bin/run-commands-series.sh -c \"test:playwright-setup:data:ci\" \"test:playwright-setup:users:ci && test:playwright-setup:users-auth:ci\"",
+    "test:playwright-e2e-setup:ci": "./bin/run-commands-series.sh -c \"yarn test:playwright-setup:data:ci\" \"yarn test:playwright-setup:users:ci && yarn test:playwright-setup:users-auth:ci\"",
     "test:playwright-e2e-nightly:ci": "FUNCTIONAL=true npx playwright test --project e2e-full-functional --no-deps",
     "test:playwright-teardown:users-auth:ci": "npx playwright test --project users-auth-teardown --pass-with-no-tests --no-deps",
-    "test:playwright-e2e-teardown:ci": "./bin/run-commands-series.sh -c \"test:playwright-teardown:users-auth:ci\" \"ts-node ./playwright-e2e/global/teardown-ci\"",
+    "test:playwright-e2e-teardown:ci": "./bin/run-commands-series.sh -c \"yarn test:playwright-teardown:users-auth:ci\" \"yarn ts-node ./playwright-e2e/global/teardown-ci\"",
     "test:playwright-e2e-debug:local": "npx playwright test --project e2e-full-functional --grep @debug",
     "test:playwright-e2e:local": "npx playwright test --project e2e-full-functional",
     "test:fullfunctional": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
@@ -118,6 +118,7 @@
     "allure-playwright": "2.4.0",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
+    "concurrently": "^9.1.0",
     "custom-eslint-plugin": "file:plugins/custom-eslint-plugins",
     "deep-equal-in-any-order": "^1.0.28",
     "dotenv": "^16.4.5",
