--- a/ccd-definition/ComplexTypes/GeneralApplicationGAspec.json
+++ b/ccd-definition/ComplexTypes/GeneralApplicationGAspec.json
@@ -356,5 +356,13 @@
     "ElementLabel": " ",
     "SecurityClassification": "Public",
     "Searchable": "N"
+  },
+  {
+    "ID": "GeneralApplicationGAspec",
+    "ListElementCode": "gaWaTrackLabel",
+    "FieldType": "Text",
+    "ElementLabel": " ",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
   }
 ]
