--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,10 @@ playwright-test-results/
 allure-results/
 playwright-allure-functional-results/
 playwright-allure-bootstrap-results/
+playwright-allure-bootstrap-report/
+playwright-allure-functional-report/
 allure-report/
 playwright-report/
 /playwright-e2e/fixtures/.users/
 /playwright-e2e/fixtures/.user-cookies/
+/playwright-e2e/fixtures/data/bankHolidays.json
