DTSCCI-650:update default case management location for civil claims

--- a/ccd-definition/ComplexTypes/GeneralApplicationGAspec.json
+++ b/ccd-definition/ComplexTypes/GeneralApplicationGAspec.json
@@ -230,7 +230,7 @@
   },
   {
     "ID": "GeneralApplicationGAspec",
-    "ListElementCode": "isCcmccLocation",
+    "ListElementCode": "isCtscLocation",
     "FieldType": "YesOrNo",
     "ElementLabel": " ",
     "SecurityClassification": "Public",
