--- a/ccd-definition/CaseEventToComplexTypes/ApplicantExpertDetailsLRspec.json
+++ b/ccd-definition/CaseEventToComplexTypes/ApplicantExpertDetailsLRspec.json
@@ -11,6 +11,7 @@
     "ID": "SmallClaimExperts",
     "CaseEventID": "CLAIMANT_RESPONSE_SPEC",
     "CaseFieldID": "applicant1RespondToClaimExperts",
+    "HintText": "If the name is unknown at this time please add TBC to both the first name and last name lines. Then use the Manage Contact Information event to provide the name when known\n",
     "ListElementCode": "firstName",
     "FieldDisplayOrder": 2,
     "DisplayContext": "MANDATORY"
