--- a/charts/civil-ccd/values.enableFlexiDb.preview.template.yaml
+++ b/charts/civil-ccd/values.enableFlexiDb.preview.template.yaml
@@ -147,6 +147,7 @@ camunda-bpm:
       CAMUNDA_DB_USER_NAME: hmcts
       CAMUNDA_DB_CONN_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
       CAMUNDA_DB_NAME: "pr-${CHANGE_ID}-camunda"
+      CAMUNDA_DB_PASSWORD: "{{ .Values.secrets.CAMUNDA_DB_PASSWORD }}"
       TEMP_VAR: false
     secrets:
       CAMUNDA_DB_PASSWORD:
