CIV-15650 Add new fields for judge orders and reasons

--- a/ccd-definition/ComplexTypes/GeneralApplicationGAspec-GA-CUI-nonprod.json
+++ b/ccd-definition/ComplexTypes/GeneralApplicationGAspec-GA-CUI-nonprod.json
@@ -14,5 +14,23 @@
     "ElementLabel": " ",
     "SecurityClassification": "Public",
     "Searchable": "N"
+  },
+  {
+    "ID": "GeneralApplicationGAspec",
+    "ListElementCode": "generalAppDetailsOfOrderColl",
+    "FieldType": "Collection",
+    "FieldTypeParameter": "TextArea",
+    "ElementLabel": " ",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
+  },
+  {
+    "ID": "GeneralApplicationGAspec",
+    "ListElementCode": "generalAppReasonsOfOrderColl",
+    "FieldType": "Collection",
+    "FieldTypeParameter": "TextArea",
+    "ElementLabel": " ",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
   }
 ]
