--- a/charts/civil-ccd/values.enableHmc.preview.template.yaml
+++ b/charts/civil-ccd/values.enableHmc.preview.template.yaml
@@ -6,7 +6,7 @@ civil-service:
     environment:
       CORE_CASE_DATA_API_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
       HMC_API_URL: http://hmc-cft-hearing-service-aat.service.core-compute-aat.internal
-      HMC_HEARINGS_SUBSCRIPTION_ENABLED: true
+      HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
       HMC_HEARINGS_TOPIC_NAME: hmc-to-cft-aat
       HMC_HEARINGS_TOPIC_NAMESPACE: hmc-servicebus-aat
       HMC_HEARINGS_TOPIC_POLICY_NAME: SendAndListenSharedAccessKey
