--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:a11y": "echo test:a11y",
     "test:coverage": "echo test:coverage",
     "highLevelDataSetup": "echo './gradlew highLevelDataSetup --args=$1' > ./temp.sh && sh ./temp.sh",
-    "test:smoke": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=smoke REPORT_DIR=test-results/smokeTest REPORT_FILE=test-results/smokeTest/results.xml  npx codeceptjs run --grep @test --reporter mocha-multi --verbose",
+    "test:smoke": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=smoke REPORT_DIR=test-results/smokeTest REPORT_FILE=test-results/smokeTest/results.xml  npx codeceptjs run --grep @smoke-tests-unspec --reporter mocha-multi --verbose",
     "test:smoke-spec": "MOCHAWESOME_REPORTFILENAME=smoke npx codeceptjs run --grep @smoke-tests-spec --reporter mocha-multi --verbose",
     "test:api-unspec": "MOCHAWESOME_REPORTFILENAME=api-unspec npx codeceptjs run-workers --suites 4  --grep @api-unspec --reporter mocha-multi --verbose",
     "test:api-unspec-full-defence": "MOCHAWESOME_REPORTFILENAME=api-unspec-full-defence npx codeceptjs run-workers --suites 4  --grep @api-unspec-full-defence --reporter mocha-multi --verbose",
@@ -79,7 +79,7 @@
     "test:e2e-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:api-nightly-prod": "MOCHAWESOME_REPORTFILENAME=api-nightly-prod npx codeceptjs run-workers --suites 8 --grep '@api-nightly-prod' --reporter mocha-multi --verbose",
     "test:e2e-nightly-nonprod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-nonprod' --reporter mocha-multi --verbose",
-    "test:non-prod-e2e-ft": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 7 --grep '@master-e2e-ft|@non-prod-e2e-ft' --reporter mocha-multi --verbose",
+    "test:non-prod-e2e-ft": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 7 --grep '@test' --reporter mocha-multi --verbose",
     "test:master-e2e-ft": "MOCHAWESOME_REPORTFILENAME=master-e2e-ft npx codeceptjs run-workers --suites 7 --grep @master-e2e-ft --reporter mocha-multi --verbose",
     "test:functional": "./e2e/run-functional-tests.sh",
     "test:sdo": "MOCHAWESOME_REPORTFILENAME=functional npx codeceptjs run --grep @sdo --reporter mocha-multi --verbose",
