switch off am org role mapping

--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -4,6 +4,9 @@ civil-ccd-stack:
 civil-translation:
   enabled: false
 
+am-org-role-mapping-service:
+  enabled: false
+  
 civil-general-applications:
   java:
     image: 'hmctspublic.azurecr.io/civil/general-applications:latest'
