--- a/charts/civil-ccd/values.enableWA.preview.template.yaml
+++ b/charts/civil-ccd/values.enableWA.preview.template.yaml
@@ -22,6 +22,22 @@ camunda-bpm:
 civil-wa:
   enabled: true
 
+am-role-assignment-service:
+  java:
+    releaseNameOverride: ${SERVICE_NAME}-am-role-assignment-service
+    imagePullPolicy: Always
+    image: hmctspublic.azurecr.io/am/role-assignment-service:latest
+    ingressHost: am-role-assignment-${SERVICE_FQDN}
+    environment:
+      RELEASE_REVISION: "{{ .Release.Revision }}"
+      ROLE_ASSIGNMENT_DB_PASSWORD: ${POSTGRES_PASSWORD}
+      ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified"
+    keyVaults:
+      am:
+        secrets:
+          - name: role-assignment-service-LD-SDK-KEY
+            alias: LD_SDK_KEY
+
 wa:
   global:
     postgresUsername: hmcts
@@ -47,7 +63,7 @@ wa:
       environment:
         CCD_URL: http://{{ .Release.Name }}-ccd-data-store-api
         CCD_SEARCH_URL: http://{{ .Release.Name }}-ccd-data-store-api
-        ROLE_ASSIGNMENT_URL: http://am-role-assignment-service-aat.service.core-compute-aat.internal
+        ROLE_ASSIGNMENT_URL: http://${SERVICE_NAME}-am-role-assignment-service
         AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
         AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
         #AZURE_SERVICE_BUS_TOPIC_NAME: servicebus-topic-{{ .Release.Name }}-asb-ccd-case-events
@@ -60,12 +76,12 @@ wa:
       ingressHost: wa-task-monitor-${SERVICE_FQDN}
       environment:
         WA_TASK_MANAGEMENT_API_URL: http://{{ .Release.Name }}-wa-task-management-api
-        ROLE_ASSIGNMENT_URL: http://am-role-assignment-service-aat.service.core-compute-aat.internal
+        ROLE_ASSIGNMENT_URL: http://${SERVICE_NAME}-am-role-assignment-service
 
   wa-task-management-api:
     java:
       environment:
-        ROLE_ASSIGNMENT_URL: http://am-role-assignment-service-aat.service.core-compute-aat.internal
+        ROLE_ASSIGNMENT_URL: http://${SERVICE_NAME}-am-role-assignment-service
         POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified"
         POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
         POSTGRES_REPLICA_HOST: "{{ .Release.Name }}-postgresql"
