--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -179,6 +179,35 @@ ccd:
           key: PASSWORD
           disabled: true
 
+am-role-assignment-service:
+  java:
+    releaseNameOverride: ${SERVICE_NAME}-am-role-assignment-service
+    imagePullPolicy: Always
+    image: hmctspublic.azurecr.io/am/role-assignment-service:latest
+    ingressHost: am-role-assignment-${SERVICE_FQDN}
+    environment:
+      RELEASE_REVISION: "{{ .Release.Revision }}"
+      ROLE_ASSIGNMENT_DB_PASSWORD: ${POSTGRES_PASSWORD}
+      ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified"
+      #        CCD_DATA_STORE_URL: http://${SERVICE_NAME}-ccd-data-store-api
+      #        http://civil-ccd-pr-5245-ccd-data-store-api
+      CCD_DATA_STORE_URL: http://ccd-data-store-api-${SERVICE_NAME}.preview.platform.hmcts.net
+      ROLE_ASSIGNMENT_S2S_AUTHORISED_SERVICES: ccd_gw,am_role_assignment_service,am_org_role_mapping_service,wa_task_management_api,wa_task_configuration_api,xui_webapp,aac_manage_case_assignment,ccd_data,wa_workflow_api,wa_task_monitor,wa_case_event_handler,iac,hmc_cft_hearing_service,ccd_case_disposer,sscs,fis_hmc_api,et_cos,civil_service
+      RUN_LD_ON_STARTUP: false
+    keyVaults:
+      am:
+        secrets:
+          - name: am-role-assignment-service-s2s-secret
+            alias: AM_ROLE_ASSIGNMENT_SERVICE_SECRET
+          - name: app-insights-connection-string
+            alias: app-insights-connection-string
+          - name: role-assignment-service-IDAM-CLIENT-SECRET
+            alias: ROLE_ASSIGNMENT_IDAM_CLIENT_SECRET
+          - name: role-assignment-service-IDAM-ADMIN-SECRET
+            alias: ROLE_ASSIGNMENT_IDAM_ADMIN_PASSWORD
+          - name: role-assignment-service-LD-SDK-KEY
+            alias: LD_SDK_KEY
+
 camunda-bpm:
   enabled: true
   java:
